k8s/db/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-app
  labels:
    app: db
spec:
  replicas: 3
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: db
        image: mysql:5.7
        ports:
        - containerPort: 3306
