k8s/db/service.yml
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  selector:
    app: db 
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: LoadBalancer
